Fixed alignment on small breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -925,12 +925,21 @@ footer.page-footer {
     font-size: 4rem;
     top: 0;
     margin-top: 40%;
+    text-align: center;
   }
 
   .bookSubhead {
     position: relative;
     font-size: 1.8rem;
     left: 0;
+    text-align: center;
+  }
+
+  #reqModalBtn {
+    position: relative;
+    left: 25%;
+    margin: auto;
+    margin-top: 30px;
   }
 
   .hello {
